--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "laravolt/indonesia": "^0.32.0",
         "realrashid/sweet-alert": "^5.1"
     },
     "require-dev": {
